--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
+    <meta name="viewport" content="user-scalable=no" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
     <meta name="theme-color" content="#000000"/>
     <!--
       manifest.json provides metadata used when your web app is added to the
